--- a/package.json
+++ b/package.json
@@ -2,15 +2,87 @@
   "name": "postie",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "dev:all": "nx run-many --target=serve --projects=web,server --parallel",
+    "dev:server": "nx serve server",
+    "dev:web": "nx serve web"
+  },
   "private": true,
-  "dependencies": {},
   "devDependencies": {
+    "@babel/preset-react": "^7.14.5",
+    "@nestjs/schematics": "^9.0.0",
+    "@nestjs/testing": "^9.0.0",
+    "@nrwl/cypress": "15.4.4",
+    "@nrwl/eslint-plugin-nx": "15.4.4",
+    "@nrwl/jest": "15.4.4",
     "@nrwl/js": "15.4.4",
+    "@nrwl/linter": "15.4.4",
+    "@nrwl/nest": "15.4.4",
+    "@nrwl/next": "^15.4.4",
+    "@nrwl/node": "15.4.4",
     "@nrwl/nx-cloud": "latest",
+    "@nrwl/react": "15.4.4",
+    "@nrwl/web": "15.4.4",
     "@nrwl/workspace": "15.4.4",
+    "@nx-tools/nx-prisma": "^4.0.2",
+    "@swc/core": "^1.2.173",
+    "@swc/jest": "0.2.20",
+    "@testing-library/react": "13.4.0",
+    "@types/cookie-parser": "^1.4.3",
+    "@types/jest": "28.1.1",
+    "@types/node": "18.11.9",
+    "@types/passport-jwt": "^3.0.8",
+    "@types/passport-local": "^1.0.34",
+    "@types/react": "18.0.25",
+    "@types/react-dom": "18.0.9",
+    "@typescript-eslint/eslint-plugin": "^5.36.1",
+    "@typescript-eslint/parser": "^5.36.1",
+    "babel-jest": "28.1.1",
+    "cypress": "^11.0.0",
+    "eslint": "~8.15.0",
+    "eslint-config-next": "13.0.0",
+    "eslint-config-prettier": "8.1.0",
+    "eslint-plugin-cypress": "^2.10.3",
+    "eslint-plugin-import": "2.26.0",
+    "eslint-plugin-jsx-a11y": "6.6.1",
+    "eslint-plugin-react": "7.31.11",
+    "eslint-plugin-react-hooks": "4.6.0",
+    "jest": "28.1.1",
+    "jest-environment-jsdom": "28.1.1",
     "nx": "15.4.4",
     "prettier": "^2.6.2",
+    "prisma": "^4.8.0",
+    "react-test-renderer": "18.2.0",
+    "sass": "1.55.0",
+    "ts-jest": "28.0.5",
+    "ts-node": "10.9.1",
     "typescript": "~4.8.2"
+  },
+  "dependencies": {
+    "@nestjs/common": "^9.0.0",
+    "@nestjs/config": "^2.2.0",
+    "@nestjs/core": "^9.0.0",
+    "@nestjs/jwt": "^10.0.1",
+    "@nestjs/passport": "^9.0.0",
+    "@nestjs/platform-express": "^9.0.0",
+    "@prisma/client": "^4.8.0",
+    "@reduxjs/toolkit": "^1.9.1",
+    "argon2": "^0.30.2",
+    "cookie-parser": "^1.4.6",
+    "cookies-next": "^2.1.1",
+    "core-js": "^3.6.5",
+    "formik": "^2.2.9",
+    "helmet": "^6.0.1",
+    "next": "13.0.0",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-redux": "^8.0.5",
+    "reflect-metadata": "^0.1.13",
+    "regenerator-runtime": "0.13.7",
+    "rxjs": "^7.0.0",
+    "tslib": "^2.3.0"
   }
 }
