--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "postie",
   "version": "0.0.0",
-  "license": "MIT",
+  "license": "GPL-3.0-or-later",
   "scripts": {
     "dev:all": "nx run-many --target=serve --projects=web,server --parallel",
     "dev:server": "nx serve server",
@@ -29,6 +29,7 @@
     "@swc/jest": "0.2.20",
     "@testing-library/react": "13.4.0",
     "@types/cookie-parser": "^1.4.3",
+    "@types/cron": "^2.0.0",
     "@types/jest": "28.1.1",
     "@types/node": "18.11.9",
     "@types/passport-jwt": "^3.0.8",
@@ -65,6 +66,7 @@
     "@nestjs/jwt": "^10.0.1",
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/schedule": "^2.1.0",
     "@prisma/client": "^4.8.0",
     "@reduxjs/toolkit": "^1.9.1",
     "argon2": "^0.30.2",
@@ -84,5 +86,10 @@
     "regenerator-runtime": "0.13.7",
     "rxjs": "^7.0.0",
     "tslib": "^2.3.0"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:renzynx/postie.git"
+  },
+  "author": "renzynx"
 }
