--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,7 +15,16 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@postie/ui": ["packages/ui/src/index.ts"]
+      "@app/*": ["packages/web/src/app/*"],
+      "@features/*": ["packages/web/src/features/*"],
+      "@layouts/*": ["packages/web/src/components/layouts/*"],
+      "@lib/*": ["packages/web/src/lib/*"],
+      "@pages/*": ["packages/web/src/components/pages/*"],
+      "@postie/server/*": ["packages/server/src/*"],
+      "@postie/shared-types": ["packages/shared-types/src/index.ts"],
+      "@postie/ui": ["packages/ui/src/index.ts"],
+      "@styles/*": ["packages/web/src/styles/*"],
+      "@sass/*": ["packages/web/src/styles/sass/*"]
     }
   },
   "exclude": ["node_modules", "tmp"]
