--- a/package.json
+++ b/package.json
@@ -34,11 +34,11 @@
     "@swc/core": "^1.2.173",
     "@swc/jest": "0.2.20",
     "@testing-library/react": "13.4.0",
+    "@types/connect-redis": "^0.0.19",
     "@types/cookie-parser": "^1.4.3",
-    "@types/cron": "^2.0.0",
+    "@types/express-session": "^1.17.5",
     "@types/jest": "28.1.1",
     "@types/node": "18.11.9",
-    "@types/passport-jwt": "^3.0.8",
     "@types/passport-local": "^1.0.34",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
@@ -70,23 +70,21 @@
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.0",
-    "@nestjs/jwt": "^10.0.1",
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
-    "@nestjs/schedule": "^2.1.0",
     "@prisma/client": "^4.8.0",
     "@reduxjs/toolkit": "^1.9.1",
     "@tabler/icons": "^1.119.0",
     "argon2": "^0.30.2",
-    "cookie-parser": "^1.4.6",
-    "cookies-next": "^2.1.1",
+    "connect-redis": "^6.1.3",
     "core-js": "^3.6.5",
+    "express-session": "^1.17.3",
     "formik": "^2.2.9",
     "helmet": "^6.0.1",
+    "ioredis": "^5.2.4",
     "next": "13.0.0",
     "nprogress": "^0.2.0",
     "passport": "^0.6.0",
-    "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
