--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@types/express-session": "^1.17.5",
     "@types/jest": "28.1.1",
     "@types/node": "18.11.9",
+    "@types/nodemailer": "^6.4.7",
     "@types/passport-local": "^1.0.34",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
@@ -67,6 +68,7 @@
     "typescript": "~4.8.2"
   },
   "dependencies": {
+    "@nestjs-modules/mailer": "^1.8.1",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.0",
@@ -80,9 +82,11 @@
     "core-js": "^3.6.5",
     "express-session": "^1.17.3",
     "formik": "^2.2.9",
+    "handlebars": "^4.7.7",
     "helmet": "^6.0.1",
     "ioredis": "^5.2.4",
     "next": "13.0.0",
+    "nodemailer": "^6.8.0",
     "nprogress": "^0.2.0",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
@@ -92,7 +96,8 @@
     "reflect-metadata": "^0.1.13",
     "regenerator-runtime": "0.13.7",
     "rxjs": "^7.0.0",
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "unique-username-generator": "^1.1.3"
   },
   "repository": {
     "type": "git",
