--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "helmet": "^6.0.1",
     "ioredis": "^5.2.4",
     "next": "13.0.0",
+    "next-redux-wrapper": "^8.1.0",
     "nodemailer": "^6.8.0",
     "nprogress": "^0.2.0",
     "passport": "^0.6.0",
